fixed button contrast

--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,15 @@ form {
 }
 
 input[type="submit"] {
-    background-color: lightgrey;
+    background-color: lightgray;
     color: white;
     border: none;
+}
+
+input[type="submit"]:hover {
+    background-color: rgb(86, 86, 86);
+    border:white;
+    cursor: pointer;
 }
 
 button {
